manager/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fizz-manager
  namespace: fizz-gateway
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fizz-manager
