manager/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fizz-manager
  namespace: fizz-gateway
  labels:
    app: fizz-manager
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: fizz-manager
  template:
    metadata:
      labels:
        app: fizz-manager
    spec:
      imagePullSecrets:
        - name: harborsecret
      terminationGracePeriodSeconds: 90
      containers:
      - name: fizz-manager
        image: fizzgate/fizz-manager-professional:2.0.0
        imagePullPolicy: Always
        command: 
          - java
        args: 
          - "-Xms256m"
          - "-Xmx4096m"
          - "-XX:MetaspaceSize=128m"
          - "-XX:MaxMetaspaceSize=256m"
          - "-Xss1m"
          - "-XX:+AggressiveOpts"
          - "-XX:+UseBiasedLocking"
          - "-XX:+CMSParallelRemarkEnabled"
          - "-XX:+UseConcMarkSweepGC"
          - "-XX:ParallelGCThreads=2"
          - "-XX:SurvivorRatio=4"
          - "-XX:+HeapDumpOnOutOfMemoryError"
          - "-XX:-OmitStackTraceInFastThrow"
          - "-verbose:gc"
          - "-XX:+PrintGCDetails"
          - "-XX:+PrintGCDateStamps"
          - "-XX:+PrintHeapAtGC"
          - "-Xloggc:/opt/fizz-manager-professional/logs/.gc"
          - "-XX:+HeapDumpOnOutOfMemoryError"
          - "-XX:+ExitOnOutOfMemoryError"
          - "-XX:HeapDumpPath=/opt/fizz-manager-professional/logs/dump.logs"
          - "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}"
          - "-Duser.timezone=GMT+8"
          - "-Djava.security.egd=file:/dev/./urandom"
          - "-jar"
          - "/opt/fizz-manager-professional/fizz-manager-professional-2.0.0.jar"
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "4096Mi"
            cpu: "1024m"
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 10   
        volumeMounts:
            - name: fizz-manager-config
              mountPath: "/opt/fizz-manager-professional/application-prod.yml"
              subPath: application.yml
      
      volumes:
      - name: fizz-manager-config
        configMap:
          name: fizz-manager-config


---
apiVersion: v1
kind: Service
metadata:
  name: fizz-manager
  namespace: fizz-gateway
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fizz-manager


---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: fizz-manager
  namespace: fizz-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  rules:
  - host: fizz-manager.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fizz-manager
          servicePort: 8000
