manager/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: fizz-manager
  namespace: fizz-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  rules:
  - host: fizz-manager.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fizz-manager
          servicePort: 8000
